ansible/roles/karavan/files/karavan-template.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: karavan
    app.kubernetes.io/part-of: karavan
  name: karavan
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: karavan
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: karavan
    app.openshift.io/runtime: camel
    app.kubernetes.io/part-of: karavan
  name: karavan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: karavan
  template:
    metadata:
      labels:
        app: karavan
    spec:
      # serviceAccountName: karavan
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: ghcr.io/apache/camel-karavan:latest
          imagePullPolicy: Always
          name: karavan
          volumeMounts:
            - name: karavan-data
              mountPath: /deployments/integrations
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          # livenessProbe:
          #   failureThreshold: 3
          #   httpGet:
          #     path: /q/health/live
          #     port: 8080
          #     scheme: HTTP
          #   initialDelaySeconds: 0
          #   periodSeconds: 30
          #   successThreshold: 1
          #   timeoutSeconds: 10
          # readinessProbe:
          #   failureThreshold: 3
          #   httpGet:
          #     path: /q/health/ready
          #     port: 8080
          #     scheme: HTTP
          #   initialDelaySeconds: 0
          #   periodSeconds: 30
          #   successThreshold: 1
          #   timeoutSeconds: 10
      volumes:
        - name: karavan-data
          persistentVolumeClaim:
            claimName: karavan-data
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: karavan
    app.kubernetes.io/part-of: karavan
  name: karavan
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: karavan
